[B]Retrospect v5.7.x - Changelog - 2024-0x-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: SVT Nyheter & Categories.
* Fixed: Folder icons for TV4 Play (Fixes #1774).
* Fixed: TV4 Play artwork did not work with HEAD requests.